--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 */
 @import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800");
 * {
-  margin: 0px;
+  margin: 1;
   padding: 0px;
   font-family: "Montserrat", "sans-serif";
 }
