--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html {
 #fh5co-hero-wrapper {
   height: 800px;
   width: 100%;
-  background: url("../img/banner-bg.jpg") no-repeat center;
+  background: url("") no-repeat center;
   border-radius: 0 0 50% 50% / 4%;
 }
 
