--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-/*
-	App by FreeHTML5.co
-	Twitter: http://twitter.com/fh5co
-	URL: http://freehtml5.co
+ /*
+  App by FreeHTML5.co
+  Twitter: http://twitter.com/fh5co
+  URL: http://freehtml5.co
 */
 @import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800");
 * {
@@ -160,7 +160,177 @@ html {
 }
 
 /* ==========================================================================================================
-										ADVANTAGES
+                    ADVANTAGES
+   =================================================================================…
+[17:07, 8/5/2019] Mateito: /*
+  App by FreeHTML5.co
+  Twitter: http://twitter.com/fh5co
+  URL: http://freehtml5.co
+*/
+@import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800");
+* {
+  margin: 1;
+  padding: 0px;
+  font-family: "Montserrat", "sans-serif";
+}
+
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+html {
+  overflow-x: hidden;
+}
+
+.download-btn-first {
+  background: #f7f7f7;
+}
+
+.download-btn-first:hover {
+  background: #234197;
+  color: #fff !important;
+}
+
+.features-btn-first {
+  font-weight: 700;
+}
+
+.features-btn-first:hover {
+  background: #f7f7f7 !important;
+  color: #234197 !important;
+}
+
+#fh5co-hero-wrapper {
+  height: 100%;
+  width: 100%;
+  background: url("") no-repeat center;
+  border-radius: 0 0 50% 50% / 4%;
+}
+
+.main-navbar-nav .navbar-brand {
+  font-size: 38px;
+  letter-spacing: 4px;
+  position: relative;
+  top: -5px;
+  font-weight: 500;
+}
+
+.main-navbar-nav {
+  color: #CAD2DA!important;
+}
+.main-navbar-nav li {
+  color: #fff;
+  opacity: .7;
+}
+.main-navbar-nav .navbar-nav .nav-item a:hover {
+  color: #234197 !important;
+  -webkit-transition: all .33s ease;
+  -moz-transition: all .33s ease;
+  -o-transition: all .33s ease;
+  -ms-transition: all .33s ease;
+  transition: all .33s ease;
+}
+.main-navbar-nav .active {
+  color: #fff !important;
+  opacity: 1 !important;
+}
+.main-navbar-nav a {
+  color: #234197 !important;
+}
+.main-navbar-nav .nav-link {
+  opacity: 1 !important;
+  margin: 0 35px;
+  font-size: 14.5px;
+  font-weight: 500;
+}
+
+.social-icons-header i {
+  margin: 15px;
+  font-size: 20px;
+}
+
+.social-icons-header a:hover i {
+  opacity: .6;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -o-transition: all .2s ease;
+  -ms-transition: all .2s ease;
+  transition: all .2s ease;
+}
+
+.fh5co-hero-inner {
+  margin-top: 110px;
+  position: relative;
+}
+.fh5co-hero-inner > h1 {
+  color: #fff;
+  font-weight: 300;
+  font-size: 55px;
+  letter-spacing: 2px;
+}
+.fh5co-hero-inner > p {
+  width: 400px;
+  font-size: 14px;
+  color: #fff;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  line-height: 2em;
+}
+.fh5co-hero-inner .download-btn-first {
+  font-size: 15px;
+  padding: 10px 15px;
+  font-weight: 700;
+  color: #234197;
+}
+.fh5co-hero-inner .features-btn-first {
+  font-size: 15px;
+  padding: 8px 13px;
+  font-weight: 400;
+  background: #234197;
+  color: #fff;
+  margin-left: 10px;
+}
+.fh5co-hero-inner .fh5co-hero-smartphone {
+  position: absolute;
+  right: 0px;
+  top: 120px;
+  height: 650px;
+}
+
+.upvideo {
+  margin-top: 0%;
+}
+.labelvideo {
+  margin-top: 3%;
+}
+.enviarreporte {
+  margin-top: 3%;
+  background-color: #6D7B7B;
+  color: white;
+  font-weight: bolder;
+}
+.cancelarreporte {
+  margin-top: 3%;
+  background-color: #8C9898;
+  color: white;
+  font-weight: bolder;
+}
+.cancelarconf {
+  background-color: #8C9898;
+}
+.confcancel {
+  background-color: #6D7B7B;
+}
+.cancelarconf, .confcancel {
+  margin-top: 3%;
+  color: white;
+  font-weight: bolder;
+}
+
+/* ==========================================================================================================
+                    ADVANTAGES
    ========================================================================================================== */
 .fh5co-advantages-outer {
   padding: 70px;
@@ -218,7 +388,7 @@ html {
 }
 
 /* ==========================================================================================================
-										SLIDER
+                    SLIDER
    ========================================================================================================== */
 .fh5co-slider-outer {
   width: 100%;
@@ -261,7 +431,7 @@ html {
 }
 
 /* ==========================================================================================================
-										FEATURES
+                    FEATURES
    ========================================================================================================== */
 .curved-bg-div {
   background: url("../img/curved-bgg.jpg") no-repeat;
@@ -431,7 +601,7 @@ html {
 }
 
 /* ==========================================================================================================
-										REVIEWS
+                    REVIEWS
    ========================================================================================================== */
 .fh5co-reviews-outer {
   width: 100%;
@@ -464,7 +634,7 @@ html {
 }
 
 /* ==========================================================================================================
-										BOTTOM
+                    BOTTOM
    ========================================================================================================== */
 .fh5co-bottom-outer {
   width: 100%;
@@ -493,7 +663,7 @@ html {
 }
 
    /* ==========================================================================================================
-										SUB FOOTER
+                    SUB FOOTER
    ========================================================================================================== */
 .img-float-left {
   float: left;
@@ -649,7 +819,7 @@ html {
   }
 
   #fh5co-hero-wrapper {
-    height: 95vh;
+    height: 100%;
   }
 
   .fh5co-hero-inner {
@@ -823,7 +993,7 @@ html {
   }
 
   #fh5co-hero-wrapper {
-    height: 800px;
+    height: 100%;
   }
 
   .fh5co-advantages-outer .fh5co-advantages-grid-columns {
@@ -959,7 +1129,7 @@ html {
 }
 @media screen and (max-width: 520px) {
   #fh5co-hero-wrapper {
-    height: 900px;
+    height: 100%;
   }
 
   .fh5co-hero-inner > h1 {
