--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,71 @@
 html {
   overflow-x: hidden;
 }
+body{
+  font-family:Lora;
+  background-size:cover
+  background-attachment: fixed;
+  background-position: center;
+
+}
+
+ /* ==========================================================================================================
+                    STYLE VER REPORTE
+   ========================================================================================================== */
+
+p{
+  line-height:1.7
+}
+
+
+.section-heading{
+  text-transform:uppercase;
+
+}
+
+.section-heading .section-heading-upper{
+  display:block;
+  font-size:1rem;
+  font-weight:800;
+}
+
+.section-heading .section-heading-lower{
+  display:block;
+  font-size:120%;
+  padding-top: 2rem;
+  text-align: center;
+  font-weight:300;
+}
+
+
+.cta{
+  padding-top:0rem;
+  padding-bottom:2rem;
+  background-color:white;
+  display: inline;
+}
+
+.cta .cta-inner{
+  position:relative;
+  padding:3rem;
+  margin:.5rem;
+  background-color:#D5D4D4;
+ }
+
+.cta .cta-inner:before{
+  border-radius:.5rem;
+  content:'';
+  position:absolute;
+  top:-.5rem;
+  bottom:-.5rem;
+  left:-.5rem;
+  right:-.5rem;
+  border:.25rem solid #D5D4D4  
+}
+
+/* ==========================================================================================================
+                   
+   ========================================================================================================== */
 
 .download-btn-first {
   background: #f7f7f7;
